--- a/72.html
+++ b/72.html
@@ -1,8 +1,50 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-<meta charset="UTF-08">
-<link rel="stylesheet" href="style.css">
-    <title>Information: Skibidi Toilet 72</title>
+  <meta name="font" content="Shadded South, fantasy">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BlugrayGuy.com</title>
+  <div class="right"><a href="https://github.com/BlugrayGuyLegit/Skibidi-toilet-community/tree/main"><button>View on GitHub</button></a><a href="https://github.com/Discode-Studio"><button>View Keams OS Team</button></a><a href="https://github.com/BlugrayGuyLegit/Blugray/new/main/wiki"><button>Create a wiki page for free!</button></a><button onclick="connectWithDiscord()">Log in with Discord</button></div>
+  <meta property="title" content="Skibidi Toilet Community by blugrayGuy">
+    <meta property="description" content="Skibidi Toilet Community by blugrayGuy is a website of secret about skibidi toilet and some information about Skibidi toilet and blugray...">
+    <link rel="shortcut icon" href="/icon/channels4_profile.jpg">
+    <meta property="og:image" content="https://media.discordapp.net/attachments/1169330015423430696/1214657060076257280/Picsart_24-03-05_20-33-22-534.png?ex=65f9e88a&is=65e7738a&hm=1a0d4cb46d95c68bd3b5ba773e67e43bbbeed41845b9343f2a80a3214337b750&">
+    <link rel="apple-touch-icon" href="https://media.discordapp.net/attachments/662665566200528906/1215021749352005662/Picsart_24-03-06_20-32-28-353.png?ex=65fb3c2f&is=65e8c72f&hm=75577cf9e5783dd6366d974f5b604c05953d964a59616c203a54eca275b9141d&">
+    <meta name="theme-color" content="#0000FF">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="BlugrayGuy.com">
+    <meta property="og:description" content="Skibidi Toilet Community by blugrayGuy is a website of secret about skibidi toilet and some information about Skibidi toilet and blugray...">
+    <meta property="og:site_name" content="BlugrayGuy.com">
+    <meta property="fb:title" content="BlugrayGuy.com">
+    <meta name="twitter:title" content="BlugrayGuy.com">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:image" content="https://media.discordapp.net/attachments/1169330015423430696/1214915589861281843/Picsart_24-03-06_13-40-27-453.png?ex=65fad950&is=65e86450&hm=1f83e09bbb221e9931b5e160795adbadb060cc652ce7e46c30b42e0b0f6036ab&">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="search.css">
+    <style>
+    .warning-box {
+      background-color: #ffe6e6;
+      border: 3px solid #ff6666;
+      padding: 10px;
+      margin-bottom: 20px;
+      border-radius: 5px;
+    }
+    .warning-box button {
+      border: 0.8px solid black;
+      background-color: transparent;
+      padding-left: 5px;
+      padding-right: 5px;
+      border-radius: 5px;
+      color: blue;
+    }
+    .information {
+      border-image: linear-gradient(to right, indianred, red, darkred, red, indianred) 5;
+    }
+  </style>
 </head>
+
 <body>
   <header>
     <a href="index.html" id="Redirect"><h1>Skibidi Toilet Community</h1><h5>By blugrayGuy</h5><br></a>
@@ -14,32 +56,160 @@
       </ul>
     </nav>
   </header>
-<section>
-  <section id="uptitle">
-<h1>Skibidi toilet 72</h1>
-<p>DaFuq!?Boom!: No one is ready for this battle !</p>
+
+  <main>
+  <section>
+<div class="search-container">
+  <input type="text" id="searchInput" placeholder="Search for a page...">
+    <button onclick="search()">Search 🔎</button>
+</div>
+
+<div id="searchResults" style="display: none;">
+  <h2>Search results :</h2>
+  <ul id="resultsList"></ul>
+</div>
   </section>
-<br>
+    <section class="information">
+    <h2>Important Information ⚠️</h2>
+    <div class="warning-box">
+      <p>Attention: Due to bug issues, some things have been removed from this page.</p>
+      <button onclick="warndel()">See information</button>
+    </div>
+  </section>
 <section>
-<h4>Information about:</h4>
-<p>
-  > Type of episodes: long<br>
-  > Environment: City<br>
-  > duration: ~3/4 minutes <br>
-  > publications: premiere<br>
-  > shorts version: true<br>
-  > new character: a lot<br>
-  > content a battle: yes (Astro vs G-Toilet vs Titan semi final battle)
-</p>
+  <h2>Last news</h2><br>
+    <div class="slideshow">
+  <div class="slide">
+    <img src="https://media.discordapp.net/attachments/1193888274423500810/1224356302063407174/722.png?ex=661d31a9&is=660abca9&hm=84be4c4f9cb424b06a255d6275477179a251e1170bdc62e443a910857ea8977c&" alt="Skibidi Toilet 72 part 2 beta leak">
+    <div class="prose">
+      <p>In the news</p>
+      <h2>Skibidi Toilet 72</h2>
+      <p>● ○ ○ </p>
+    </div>
+  </div>
+
+  <div class="slide">
+    <img src="https://steamuserimages-a.akamaihd.net/ugc/1018318128668295061/263B707C41B0CE0B5E951FD43C9A323FBA8BD1AA/?imw=1024&imh=576&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true" alt="72 part 2">
+    <div class="prose">
+      <p>Coming soon...</p>
+      <h2>Skibidi Toilet 73</h2>
+      <a href="72.html">View info!</a>
+      <p>○ ● ○ </p>
+    </div>
+  </div>
+
+      <div class="slide">
+    <img src="https://media.discordapp.net/attachments/1193888274423500810/1224355751040909332/Picsart_24-04-01_15-52-13-254.jpg?ex=661d3126&is=660abc26&hm=2390c0430985722bad6afce5cfa15c7b234862a6c1b2e1bbb1a1ef8e00101503&" alt="ST72 AstroNecromancerToilet">
+    <div class="prose">
+      <p>Out now!</p>
+      <h2>Skibidi Toilet 72</h2>
+      <a href="https://youtu.be/ajhQdw3Y6ws?si=L8XNmoZ4rHtr_xOg">Watch now!</a>
+      <p>○ ○ ● </p>
+    </div>
+      </div>
+
+  <!-- more show if needed -->
+
+
+    </div>
 </section>
-<br>
-<section id="about">
-  <h1>Information about the episode</h1>
-    <p>
-      The <b>semi-final</b> has started, the <b>Astro and the G-TOILET</b> will face each other but the <b>Titans</b> will interrupt and fight them too.<br>
-      <b>Someone very powerful</b> is in this part,
-      <i>no one is ready</i>...
-    </p>
+<section>
+  <h2>Skibidi Toilet Storylines</h2>
+  <p>Access <a href="storyline.html">now here </a>to the storyline!</p>
 </section>
-</section>
+    <section>
+      <h2>Document [72-2]</h2>
+      <p>Coming 1 April 2024.</p>
+      <p>More information <a href="72.html">here!</a></p>
+    </section>
+      <section>
+      <h2>Document [Dark Tie]</h2>
+      <p>Information about The Dark tie</p>
+      <p>The Dark Tie is a tie like all others tie exist but more strange, creepy and very dark... The Dark Tie is a secret tie there never appeared before but if you want more information <a href="dtst.html">click here !</a></p>
+    </section>
+    <section>
+      <h2>Document [#blugrayguy]</h2>
+      <p>#blugrayguy is a hashtag started by Blugray himself, this hashtag aims for people to use it and blugray makes a dedication to them in return, he created this hashtag for fun no project behind it is planned...</p>
+      <p>
+        this hashtag you can use it anywhere and at any time but there are conditions,<br><br> - in blugray comments (no conditions),<br> - in a video (blugray mentions with @BlugrayGuy),<br> - in a post (mentions of blugray with @BlugrayGuy),<br> - in the comment of a blugray video (no conditions),<br> - in the comments of another video (informed blugray of this...).
+      </p>
+    </section>
+    <section>
+      <h2>Document [YouTube]</h2>
+      <p>Numbers of subscribers</p>
+      <iframe height="90px" width="310px" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCl5a9XEa7LQXxncMs7uleWQ/embed?style=body%7Bbackground-color%3Argba%280%2C0%2C0%2C0%29%21important%7D" allowFullScreen></iframe><br>
+        <h4>Goal -> 900 and 1000</h4><br><br>
+        <h2>last video</h2>
+       <iframe width="560" height="315" src="https://www.youtube.com/embed/HDEgJci7Rs8?si=8t82BQHdXh3iEQIQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  </section>
+  <section>
+    <h2>All Skibidi Toilet Series Teams</h2>
+    <section id="about">
+      <h3><img src="ToiletLogo.png" alt="Toilet Team" id="team"> •  Skibidi Toilet</h3>
+      <p>Team of Skibidi toilet... No important Information<br>The leaders of the skibidi toilet team is <b>G-Toilet</b>.</p>
+    </section>
+    <section id="about">
+      <h3><img src="astrologo.webp" alt="AstroTeam" id="team"> • AstroTeam</h3>
+      <p>The AstroTeam is a team made up of 3 members, the Astro Toilet and the UFO Toilet and the leader of the AstroToilet is <b>Astro Necromancer Toilet</b>.</p>
+    </section>
+   <section id="about">
+      <h3><img src="CameraLogo.png" alt="Cameraman" id="team"> | <img src="SpeakerLogo.png" alt="SpeakerMan" id="team"> | <img src="TVLogo.png" alt="TVMan" id="team"> • Alliance</h3>
+      <p>The alliance is a team with 3 group, the first group is the Cameraman group, the second is the Speaker group, and the last is the TV Man group. The leader of the alliance is <b>unknown</b>...</p>
+    </section>
+    <section id="about">
+      <h3><img src="HumanLogo.png" alt"Neutral (formerly HumanTeam)" id="team"> • Neutral</h3>
+      <p>The neutral team is for now unknown, only things we know is the neutral team was owned by the government and the QG is on Alpha Hills Labs. The actual leader is <b>Blugray / Government</b></p>
+    </section>
+    <section id="about">
+      <h3>[?] • NakedKitchen Team</h3>
+      <p>Made up of Naked Kitchenmen, this new group will appear in future episodes to come.<br>
+      Actually we don't have <b>no information</b> about this team, expect that come on some troll skibidi toilet episodes...</p>
+    </section>
+  </section>
+
+ <section>
+      <h2>Website's credits</h2>
+      <p>Credits of all developers and contributors</p>
+      <section>
+        <h3>Developers</h3>
+        <section>
+          <h4> - BlugrayGuy</h4><p><a href="https://youtube.com/@BlugrayGuy?sub_confirmation=1">Subscribe here!</a></p><br><br>
+          <h4> - MirossOffYT</h4><p><a href="https://youtube.com/@MirossOffYT?sub_confirmation=1">Subscribe here!</a></p>
+        </section>
+        <h3>Contributors</h3>
+        <section>
+          <h4> - DaFuq!?Boom!</h4><p><a href="https://youtube.com/@DaFuqBoom?sub_confirmation=1">Subscribe here!</a></p>
+        </section>
+      </section>
+    </section>
+
+  </main>
+  <div class="floating-video">
+<iframe width="360" height="205" src="https://www.youtube-nocookie.com/embed/m7sp-FTeZWE?si=zm-IzMYykcpqG4Mx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
 </body>
+<script>
+var slideIndex = 0;
+  showSlides();
+
+  function showSlides() {
+    var i;
+    var slides = document.getElementsByClassName("slide");
+    for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";
+    }
+    slideIndex++;
+    if (slideIndex > slides.length) {slideIndex = 1}
+    slides[slideIndex-1].style.display = "block";
+    setTimeout(showSlides, 5000);
+  }
+</script>
+<script src="ex-sraw.js"></script>
+    <script>
+        function connectWithDiscord() {
+            
+            window.location.href = 'https://discord.com/oauth2/authorize?client_id=1221431219217109024&response_type=code&redirect_uri=https%3A%2F%2Fblugrayguylegit.github.io%2FBlugray%2F&scope=identify+guilds.join+connections';
+        }
+    </script>
+
+</html>
