--- a/index.html
+++ b/index.html
@@ -80,42 +80,33 @@
   <h2>Last news</h2><br>
     <div class="slideshow">
   <div class="slide">
-    <img src="https://media.discordapp.net/attachments/1076988047998074931/1222978989178753124/Picsart_24-03-28_19-41-38-025.jpg?ex=66182ef0&is=6605b9f0&hm=9bacb64d69dd48da3a6d854d92c8d209d8054c81132cc5e4a836f87a35b122ca&" alt="Skibidi Toilet 72 part 2 beta leak">
+    <img src="https://media.discordapp.net/attachments/1193888274423500810/1224356302063407174/722.png?ex=661d31a9&is=660abca9&hm=84be4c4f9cb424b06a255d6275477179a251e1170bdc62e443a910857ea8977c&" alt="Skibidi Toilet 72 part 2 beta leak">
     <div class="prose">
-      <p>New leak from Instagram !</p>
-      <h2>This is big shit for someone...</h2>
-      <p>● ○ ○ ○</p>
+      <p>In the news</p>
+      <h2>Skibidi Toilet 72</h2>
+      <p>● ○ ○ </p>
     </div>
   </div>
 
   <div class="slide">
-    <img src="https://media.discordapp.net/attachments/1076988047998074931/1220402199255978064/Picsart_24-03-21_17-02-27-494.jpg?ex=660ecf1e&is=65fc5a1e&hm=0385a51a35be4109a4e08d11fb6d0c769dcadc8236d7dae75171fc5afda1b07d&" alt="72 part 2">
+    <img src="https://steamuserimages-a.akamaihd.net/ugc/1018318128668295061/263B707C41B0CE0B5E951FD43C9A323FBA8BD1AA/?imw=1024&imh=576&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true" alt="72 part 2">
     <div class="prose">
       <p>Coming soon...</p>
-      <h2>Skibidi Toilet 72 (Part 2)</h2>
+      <h2>Skibidi Toilet 73</h2>
       <a href="72.html">View info!</a>
-      <p>○ ● ○ ○</p>
+      <p>○ ● ○ </p>
     </div>
   </div>
 
       <div class="slide">
-    <img src="https://media.discordapp.net/attachments/1076988047998074931/1220402199809490996/Picsart_24-03-21_17-02-13-506.png?ex=660ecf1e&is=65fc5a1e&hm=c796159893e57f8b4be8e57bf7ff375b77d5803072a7895589f97f9024f8890e&" alt="72 part 1">
+    <img src="https://media.discordapp.net/attachments/1193888274423500810/1224355751040909332/Picsart_24-04-01_15-52-13-254.jpg?ex=661d3126&is=660abc26&hm=2390c0430985722bad6afce5cfa15c7b234862a6c1b2e1bbb1a1ef8e00101503&" alt="ST72 AstroNecromancerToilet">
     <div class="prose">
       <p>Out now!</p>
       <h2>Skibidi Toilet 72</h2>
-      <a href="https://youtu.be/o_1YiaJSnjo">Watch now!</a>
-      <p>○ ○ ● ○</p>
+      <a href="https://youtu.be/ajhQdw3Y6ws?si=L8XNmoZ4rHtr_xOg">Watch now!</a>
+      <p>○ ○ ● </p>
     </div>
       </div>
-
-      <div class="slide">
-    <img src="https://media.discordapp.net/attachments/1076988047998074931/1219271167790026823/Picsart_24-03-13_15-30-00-202.png?ex=660ab1c3&is=65f83cc3&hm=8ac194bec3c9902249727f5d4b236dc3fa49ec963f961cd9e140d2a524234953&" alt="Blugray_29.idk">
-    <div class="prose">
-      <p>Recent video!</p>
-      <h2>Blugray OST (Remaster)</h2>
-      <a href="https://youtu.be/HDEgJci7Rs8?si=VdJpryGHerZQ1Skm">Watch Now!</a>
-      <p>○ ○ ○ ●</p>
-    </div>
 
   <!-- more show if needed -->
 
@@ -159,7 +150,7 @@
     </section>
     <section id="about">
       <h3><img src="astrologo.webp" alt="AstroTeam" id="team"> • AstroTeam</h3>
-      <p>The AstroTeam is a team made up of two members, the Astro Toilet and the UFO Toilet. The leader of the AstroToilet is <b>Astro Toilet</b>.</p>
+      <p>The AstroTeam is a team made up of 3 members, the Astro Toilet and the UFO Toilet and the leader of the AstroToilet is <b>Astro Necromancer Toilet</b>.</p>
     </section>
    <section id="about">
       <h3><img src="CameraLogo.png" alt="Cameraman" id="team"> | <img src="SpeakerLogo.png" alt="SpeakerMan" id="team"> | <img src="TVLogo.png" alt="TVMan" id="team"> • Alliance</h3>
