--- a/storyline.html
+++ b/storyline.html
@@ -67,7 +67,7 @@ Strangely the <b>plungerman</b> sees the ghosts of his allies, then is teleporte
 
 History/theory:<br>
 <b>Blugray</b> has become the head of the government and the <b>alliance</b> created by the government, <b>Blugray</b> can therefore control the <b>alliance</b> from a distance but prefers to remain Secret to avoid any problems...<br>
-We still don't know where the <b>toilet</b> comes from, but we know where the wedding ring comes from.<br><br>
+We still don't know where the <b>toilet</b> comes from, but we know where the alliance comes from.<br><br>
 
 Let's go to <b>episode</b> 71, we discover in this one why the <b>titan</b> <b>tv</b> <b>man</b> has a broken <b>TV</b> [see Summary page],<br>
 subsequently we discover that we are in reality on a gigantic silo of the bunker which actually contains the <b>Gman</b>, then he comes out devastates everything and flees...<br><br>
