--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
 </head>
 
 <body>
+  <br>
   <header>
-    <a href="index.html" id="Redirect"><h1>Skibidi Toilet Community</h1><h5>By blugrayGuy</h5><br></a>
+    <a href="index.html" id="Redirect"><h1>Skibidi Toilet Community - BlugrayGuy.com</h1></a>
     <nav>
       <ul>
         <li><a href="https://linktr.ee/blugray">All Socials</a></li>
@@ -55,35 +56,28 @@
         <li><a href="summary.html">Skibidi Toilet Ep Summary</a></li>
       </ul>
     </nav>
-  </header>
-
-  <main>
-  <section>
-<div class="search-container">
+      <div class="search-container">
   <input type="text" id="searchInput" placeholder="Search for a page...">
-    <button onclick="search()">Search 🔎</button>
+    <button onclick="search()">Search</button>
 </div>
+<br>
+
 
 <div id="searchResults" style="display: none;">
   <h2>Search results :</h2>
-  <ul id="resultsList"></ul>
+  <u><ul id="resultsList"></ul></u>
 </div>
-  </section>
-    <section class="information">
-    <h2>Important Information ⚠️</h2>
-    <div class="warning-box">
-      <p>Attention: Due to bug issues, some things have been removed from this page.</p>
-      <button onclick="warndel()">See information</button>
-    </div>
-  </section>
+  </header>
+
+  <main>
 <section>
   <h2>Last news</h2><br>
     <div class="slideshow">
   <div class="slide">
-    <img src="https://media.discordapp.net/attachments/1193888274423500810/1224356302063407174/722.png?ex=661d31a9&is=660abca9&hm=84be4c4f9cb424b06a255d6275477179a251e1170bdc62e443a910857ea8977c&" alt="Skibidi Toilet 72 part 2 beta leak">
+    <img src="https://media.discordapp.net/attachments/1112820653691781170/1225849741620023457/Picsart_24-04-05_18-47-34-999.png?ex=6622a089&is=66102b89&hm=1fe65874b96d9f06b6fcd6c44001a969840bd068e550b2204e9de369fa09efc4&" alt="Skibidi Toilet 72 Full episode">
     <div class="prose">
       <p>In the news</p>
-      <h2>Skibidi Toilet 72</h2>
+      <h2>Skibidi Toilet 72 (Full Episode)</h2>
       <p>● ○ ○ </p>
     </div>
   </div>
@@ -99,7 +93,7 @@
   </div>
 
       <div class="slide">
-    <img src="https://media.discordapp.net/attachments/1193888274423500810/1224355751040909332/Picsart_24-04-01_15-52-13-254.jpg?ex=661d3126&is=660abc26&hm=2390c0430985722bad6afce5cfa15c7b234862a6c1b2e1bbb1a1ef8e00101503&" alt="ST72 AstroNecromancerToilet">
+    <img src="https://media.discordapp.net/attachments/1193888274423500810/1224355751040909332/Picsart_24-04-01_15-52-13-254.jpg?ex=661d3126&is=660abc26&hm=2390c0430985722bad6afce5cfa15c7b234862a6c1b2e1bbb1a1ef8e00101503&" alt="ST72 AstroEmperorToilet">
     <div class="prose">
       <p>Out now!</p>
       <h2>Skibidi Toilet 72</h2>
@@ -138,9 +132,8 @@
       <h2>Document [YouTube]</h2>
       <p>Numbers of subscribers</p>
       <iframe height="90px" width="310px" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCl5a9XEa7LQXxncMs7uleWQ/embed?style=body%7Bbackground-color%3Argba%280%2C0%2C0%2C0%29%21important%7D" allowFullScreen></iframe><br>
-        <h4>Goal -> 900 and 1000</h4><br><br>
-        <h2>last video</h2>
-       <iframe width="560" height="315" src="https://www.youtube.com/embed/HDEgJci7Rs8?si=8t82BQHdXh3iEQIQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <h4>Subscription goal to achieve:</h4><br>
+        <p>1500 - 2000 - 3000 - 5000 - 10000</p><br><br>
   </section>
   <section>
     <h2>All Skibidi Toilet Series Teams</h2>
@@ -150,7 +143,7 @@
     </section>
     <section id="about">
       <h3><img src="astrologo.webp" alt="AstroTeam" id="team"> • AstroTeam</h3>
-      <p>The AstroTeam is a team made up of 3 members, the Astro Toilet and the UFO Toilet and the leader of the AstroToilet is <b>Astro Necromancer Toilet</b>.</p>
+      <p>The AstroTeam is a team made up of 3 members, the Astro Toilet and the UFO Toilet and the leader of the AstroToilet is <b>Astro Emperor Toilet</b>.</p>
     </section>
    <section id="about">
       <h3><img src="CameraLogo.png" alt="Cameraman" id="team"> | <img src="SpeakerLogo.png" alt="SpeakerMan" id="team"> | <img src="TVLogo.png" alt="TVMan" id="team"> • Alliance</h3>
@@ -185,7 +178,7 @@
 
   </main>
   <div class="floating-video">
-<iframe width="360" height="205" src="https://www.youtube-nocookie.com/embed/m7sp-FTeZWE?si=zm-IzMYykcpqG4Mx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="360" height="205" src="https://www.youtube-nocookie.com/embed/d7DdLRe5QgM?si=Jwd1IvurNaMZJj8k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 </body>
 <script>
