--- a/wiki/blugray-truth.html
+++ b/wiki/blugray-truth.html
@@ -6,14 +6,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
  <link rel="stylesheet" href="/style.css">
   <link rel="stylesheet" href="/search.css">
-  <title>Blugray truth</title>
+  <title>Lost Information of Blugray's Albums - Wiki BlugrayGuy.com</title>
+  <meta name="theme-color" content="#0000FF">
+  <style>
+    .line-space {
+      line-break: 1px;
+      margin: 1px;
+      border-bottom: 1px solid black;
+    }
+  </style>
 </head>
 
 <body>
-<h1>Blugray truth</h1>
-<h4>A wiki by MirossOffYT</h4>
-<p>This page is under construction...</p>
+  <header>
+<h1>Blugray's albums lost informations</h1>
+<h4>Made by MirossOffYT on BlugrayGuy.com</h4>
+  </header>
+  <section>
+<div class="line-space"></div>
+<br>
+<h3>This page is under construction</h3>
+<p>More content coming soon...</p>
+<br>
+<div class="line-space"></div>
+<br>
+  This wiki brings together certain (official) information on the different blugray albums, sometimes lost...
+   <br><br> 
+  <h3>- Embracing</h3><br> The first is the Embracing album, this album has a normal appearance but hides a mystery behind...<br>
+  Yes, behind this albums a mystery is hidden, the secret is that behind this album there is a dark story of suicide...<br>
+  This album also contains dark music still unknown to this day, no lyrics and a strange song. This music is "Sadness".
+  <br><br>  
+  <h3>- Yain't Shit</h3><br>
+  <br><br>  
+  <h3>- Farewell Mr.p</h3><br>
+  <br><br>  
+  <h3>- Bleak</h3><br>
+  <br><br>
+  <h3>- Resonant Echoes</h3><br>
+<br><br>
+<div class="line-space"></div><br>
 <a href="/index.html"><button>access to Blugray website</button></a>
+</section>
 </body>
 
 </html>
