--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BlugrayGuy.com</title>
-  <div class="right"><a href="https://github.com/BlugrayGuyLegit/Skibidi-toilet-community/tree/main"><button>View on GitHub</button></a><a href="https://github.com/Discode-Studio"><button>View Keams OS Team</button></a><a href="https://github.com/BlugrayGuyLegit/Blugray/new/main/wiki"><button>Create a wiki page for free!</button></a><button onclick="connectWithDiscord()">Log in with Discord</button></div>
+  
+  <div class="right"><a href="https://github.com/BlugrayGuyLegit/Skibidi-toilet-community/tree/main"><button>View on GitHub</button></a><a href="https://github.com/Discode-Studio"><button>View Keams OS Team</button></a><a href="https://github.com/BlugrayGuyLegit/Blugray/new/main/wiki"><button>Create a wiki page for free!</button></a><button onclick="connectWithDiscord()">Log in with Discord</button><button id="startAudio">Easter Egg 🥚</button></div>
+  
   <meta property="title" content="Skibidi Toilet Community by blugrayGuy">
-    <meta property="description" content="Skibidi Toilet Community by blugrayGuy is a website of secret about skibidi toilet and some information about Skibidi toilet and blugray...">
-    <link rel="shortcut icon" href="/icon/channels4_profile.jpg">
+    <meta property="description" content="Official BlugrayGuy.com by Blugray.">
+    <link rel="shortcut icon" href="astrologo.webp">
     <meta property="og:image" content="https://media.discordapp.net/attachments/1169330015423430696/1214657060076257280/Picsart_24-03-05_20-33-22-534.png?ex=65f9e88a&is=65e7738a&hm=1a0d4cb46d95c68bd3b5ba773e67e43bbbeed41845b9343f2a80a3214337b750&">
     <link rel="apple-touch-icon" href="https://media.discordapp.net/attachments/662665566200528906/1215021749352005662/Picsart_24-03-06_20-32-28-353.png?ex=65fb3c2f&is=65e8c72f&hm=75577cf9e5783dd6366d974f5b604c05953d964a59616c203a54eca275b9141d&">
     <meta name="theme-color" content="#0000FF">
@@ -109,11 +111,11 @@
 </section>
 <section>
   <h2>Skibidi Toilet Storylines</h2>
-  <p>Access <a href="storyline.html">now here </a>to the storyline!</p>
+  <p>Want to know the full skibidi toilet storyline? <a href="storyline.html">click here </a>to access to the storyline!</p>
 </section>
     <section>
-      <h2>Document [72-2]</h2>
-      <p>Coming 1 April 2024.</p>
+      <h2>Document [73]</h2>
+      <p>Coming soon...</p>
       <p>More information <a href="72.html">here!</a></p>
     </section>
       <section>
@@ -122,18 +124,35 @@
       <p>The Dark Tie is a tie like all others tie exist but more strange, creepy and very dark... The Dark Tie is a secret tie there never appeared before but if you want more information <a href="dtst.html">click here !</a></p>
     </section>
     <section>
-      <h2>Document [#blugrayguy]</h2>
-      <p>#blugrayguy is a hashtag started by Blugray himself, this hashtag aims for people to use it and blugray makes a dedication to them in return, he created this hashtag for fun no project behind it is planned...</p>
-      <p>
-        this hashtag you can use it anywhere and at any time but there are conditions,<br><br> - in blugray comments (no conditions),<br> - in a video (blugray mentions with @BlugrayGuy),<br> - in a post (mentions of blugray with @BlugrayGuy),<br> - in the comment of a blugray video (no conditions),<br> - in the comments of another video (informed blugray of this...).
-      </p>
-    </section>
-    <section>
-      <h2>Document [YouTube]</h2>
-      <p>Numbers of subscribers</p>
-      <iframe height="90px" width="310px" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCl5a9XEa7LQXxncMs7uleWQ/embed?style=body%7Bbackground-color%3Argba%280%2C0%2C0%2C0%29%21important%7D" allowFullScreen></iframe><br>
-        <h4>Subscription goal to achieve:</h4><br>
-        <p>1500 - 2000 - 3000 - 5000 - 10000</p><br><br>
+      <table>
+  <tr>
+    <th colspan="2">Document [YouTube]</th>
+  </tr>
+  <tr>
+    <td colspan="2">Numbers of subscribers</td>
+  </tr>
+  <tr>
+    <td colspan="2">
+      <iframe height="90px" width="310px" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCl5a9XEa7LQXxncMs7uleWQ/embed?style=body%7Bbackground-color%3Argba%280%2C0%2C0%2C0%29%21important%7D" allowFullScreen></iframe>
+    </td>
+  </tr>
+  <tr>
+    <td colspan="2"><h4>Subscription goal to achieve:</h4></td>
+  </tr>
+  <tr>
+    <td>1500</td>
+    <td>2000</td>
+  </tr>
+  <tr>
+    <td>3000</td>
+    <td>5000</td>
+  </tr>
+  <tr>
+    <td>10000</td>
+    <td>100000</td>
+    <caption>BlugrayGuy.com</caption>
+  </tr>
+</table>
   </section>
   <section>
     <h2>All Skibidi Toilet Series Teams</h2>
@@ -158,22 +177,89 @@
       <p>Made up of Naked Kitchenmen, this new group will appear in future episodes to come.<br>
       Actually we don't have <b>no information</b> about this team, expect that come on some troll skibidi toilet episodes...</p>
     </section>
+  <section>
+   <table>
+  <caption>
+    Copyright 2024 BlugrayGuy.com©
+  </caption>
+  <thead>
+    <tr>
+      <th scope="col">Team names</th>
+      <th scope="col">Members</th>
+      <th scope="col">Leader</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">Skibidi Toilet</th>
+      <td>Unknown</td>
+      <td>G-Toilet</td>
+    </tr>
+    <tr>
+      <th scope="row">Astro Team</th>
+      <td>3</td>
+      <td>Emperor Astro Toilet</td>
+    </tr>
+    <tr>
+      <th scope="row">Alliance</th>
+      <td>Unknown - 3 team</td>
+      <td>Unknown</td>
+    </tr>
+    <tr>
+      <th scope="row">Neutral</th>
+      <td>Known: 1, the rest are unknown</td>
+      <td>Agent Blugray</td>
+    </tr>
+     <tr>
+      <th scope="row">NakedKitchen</th>
+      <td>Known: 1</td>
+      <td>Microwave Man</td>
+    </tr>
+  </tbody>
+  <tfoot>
+    <tr>
+      <th scope="row" colspan="2">Total number of teams</th>
+      <td>7</td>
+    </tr>
+  </tfoot>
+</table>
   </section>
-
+    </section>
  <section>
-      <h2>Website's credits</h2>
-      <p>Credits of all developers and contributors</p>
-      <section>
-        <h3>Developers</h3>
-        <section>
-          <h4> - BlugrayGuy</h4><p><a href="https://youtube.com/@BlugrayGuy?sub_confirmation=1">Subscribe here!</a></p><br><br>
-          <h4> - MirossOffYT</h4><p><a href="https://youtube.com/@MirossOffYT?sub_confirmation=1">Subscribe here!</a></p>
-        </section>
-        <h3>Contributors</h3>
-        <section>
-          <h4> - DaFuq!?Boom!</h4><p><a href="https://youtube.com/@DaFuqBoom?sub_confirmation=1">Subscribe here!</a></p>
-        </section>
-      </section>
+<table>
+  <tr>
+    <th colspan="2">Website's credits</th>
+  </tr>
+  <tr>
+    <td colspan="2">Credits of all developers and contributors</td>
+  </tr>
+  <tr>
+    <td colspan="2">
+      <h3>Developers</h3>
+      <table>
+        <tr>
+          <td>- BlugrayGuy</td>
+          <td><a href="https://youtube.com/@BlugrayGuy?sub_confirmation=1">Subscribe here!</a></td>
+        </tr>
+        <tr>
+          <td>- MirossOffYT</td>
+          <td><a href="https://youtube.com/@MirossOffYT?sub_confirmation=1">Subscribe here!</a></td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+  <tr>
+    <td colspan="2">
+      <h3>Contributors</h3>
+      <table>
+        <tr>
+          <td>- DaFuq!?Boom!</td>
+          <td><a href="https://youtube.com/@DaFuqBoom?sub_confirmation=1">Subscribe here!</a></td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
     </section>
 
   </main>
@@ -181,6 +267,16 @@
 <iframe width="360" height="205" src="https://www.youtube-nocookie.com/embed/d7DdLRe5QgM?si=Jwd1IvurNaMZJj8k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 </body>
+<audio id="backgroundMusic" autoplay loop>
+  <source src="/hl2_song30.mp3">
+  Your browser does not support the audio element.
+</audio>
+<script>
+document.getElementById("startAudio").addEventListener("click", function() {
+  var audio = document.getElementById("backgroundMusic");
+  audio.play();
+});
+</script>
 <script>
 var slideIndex = 0;
   showSlides();
