--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 </div>
 </body>
 <audio id="backgroundMusic" autoplay loop>
-  <source src="/hl2_song30.mp3">
+  <source src="hl2_song30.mp3">
   Your browser does not support the audio element.
 </audio>
 <script>
