--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BlugrayGuy.com</title>
   
-  <div class="right"><a href="https://github.com/BlugrayGuyLegit/Skibidi-toilet-community/tree/main"><button>View on GitHub</button></a><a href="https://github.com/Discode-Studio"><button>View Keams OS Team</button></a><a href="https://github.com/BlugrayGuyLegit/Blugray/new/main/wiki"><button>Create a wiki page for free!</button></a><button onclick="connectWithDiscord()">Log in with Discord</button><button id="startAudio">Easter Egg 🥚</button></div>
+  <div class="right"><a href="https://github.com/BlugrayGuyLegit/Skibidi-toilet-community/tree/main"><button>View on GitHub</button></a><a href="https://github.com/Discode-Studio"><button>View Keams OS Team</button></a><a href="https://github.com/BlugrayGuyLegit/Blugray/new/main/wiki"><button>Create a wiki page for free!</button></a><button onclick="connectWithDiscord()">Log in with Discord</button><button id="startAudio">Easter Egg </button></div>
   
   <meta property="title" content="Skibidi Toilet Community by blugrayGuy">
     <meta property="description" content="Official BlugrayGuy.com by Blugray.">
@@ -76,10 +76,11 @@
   <h2>Last news</h2><br>
     <div class="slideshow">
   <div class="slide">
-    <img src="https://media.discordapp.net/attachments/1112820653691781170/1225849741620023457/Picsart_24-04-05_18-47-34-999.png?ex=6622a089&is=66102b89&hm=1fe65874b96d9f06b6fcd6c44001a969840bd068e550b2204e9de369fa09efc4&" alt="Skibidi Toilet 72 Full episode">
+    <img src="https://media.discordapp.net/attachments/1193270637876228218/1231347370860740769/maxresdefault_11.jpg?ex=6636a09a&is=66242b9a&hm=46037d43b0fa3a5f25be67ffcff5f67a224a6bb46611e6f4f3981196e2abfa74&" alt="Skibidi Toilet 72 Full episode">
     <div class="prose">
       <p>In the news</p>
-      <h2>Skibidi Toilet 72 (Full Episode)</h2>
+      <h2>Skibidi Toilet 73 (Part 1)</h2>
+      <a href="https://youtu.be/ajhQdw3Y6ws?si=L8XNmoZ4rHtr_xOg">Watch now!</a>
       <p>● ○ ○ </p>
     </div>
   </div>
@@ -88,18 +89,17 @@
     <img src="https://steamuserimages-a.akamaihd.net/ugc/1018318128668295061/263B707C41B0CE0B5E951FD43C9A323FBA8BD1AA/?imw=1024&imh=576&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true" alt="72 part 2">
     <div class="prose">
       <p>Coming soon...</p>
-      <h2>Skibidi Toilet 73</h2>
+      <h2>Skibidi Toilet 73 (Part 2)</h2>
       <a href="72.html">View info!</a>
       <p>○ ● ○ </p>
     </div>
   </div>
 
       <div class="slide">
-    <img src="https://media.discordapp.net/attachments/1193888274423500810/1224355751040909332/Picsart_24-04-01_15-52-13-254.jpg?ex=661d3126&is=660abc26&hm=2390c0430985722bad6afce5cfa15c7b234862a6c1b2e1bbb1a1ef8e00101503&" alt="ST72 AstroEmperorToilet">
+    <img src="https://media.discordapp.net/attachments/1193270637876228218/1231353257956474933/maxresdefault_14.jpg?ex=6636a616&is=66243116&hm=176d3da990e56711e59e776bf860bddb7ef987b65e188ab0531ed5b338807950&" alt="ST72 AstroEmperorToilet">
     <div class="prose">
-      <p>Out now!</p>
-      <h2>Skibidi Toilet 72</h2>
-      <a href="https://youtu.be/ajhQdw3Y6ws?si=L8XNmoZ4rHtr_xOg">Watch now!</a>
+      <p>Temporal rebirth</p>
+      <h2>Code name: <b><i>Scientist Project</i></b></h2>
       <p>○ ○ ● </p>
     </div>
       </div>
@@ -166,7 +166,7 @@
     </section>
    <section id="about">
       <h3><img src="CameraLogo.png" alt="Cameraman" id="team"> | <img src="SpeakerLogo.png" alt="SpeakerMan" id="team"> | <img src="TVLogo.png" alt="TVMan" id="team"> • Alliance</h3>
-      <p>The alliance is a team with 3 group, the first group is the Cameraman group, the second is the Speaker group, and the last is the TV Man group. The leader of the alliance is <b>unknown</b>...</p>
+      <p>The alliance is a team with 3 group, the first group is the Cameraman group, the second is the Speaker group, and the last is the TV Man group. The leader of the alliance is <b>Alpha Hills Company</b></p>
     </section>
     <section id="about">
       <h3><img src="HumanLogo.png" alt"Neutral (formerly HumanTeam)" id="team"> • Neutral</h3>
@@ -187,6 +187,7 @@
       <th scope="col">Team names</th>
       <th scope="col">Members</th>
       <th scope="col">Leader</th>
+      <th scope="col">Sign</th>
     </tr>
   </thead>
   <tbody>
@@ -194,31 +195,36 @@
       <th scope="row">Skibidi Toilet</th>
       <td>Unknown</td>
       <td>G-Toilet</td>
+      <td>Skibidi</td>
     </tr>
     <tr>
       <th scope="row">Astro Team</th>
       <td>3</td>
       <td>Emperor Astro Toilet</td>
+      <td>Three line helmet</td>
     </tr>
     <tr>
       <th scope="row">Alliance</th>
       <td>Unknown - 3 team</td>
-      <td>Unknown</td>
+      <td>Alpha Hills Company</td>
+      <td>Thumb UP</td>
     </tr>
     <tr>
       <th scope="row">Neutral</th>
       <td>Known: 1, the rest are unknown</td>
       <td>Agent Blugray</td>
+      <td>Unknown</td>
     </tr>
      <tr>
       <th scope="row">NakedKitchen</th>
       <td>Known: 1</td>
       <td>Microwave Man</td>
+      <td>Goofy ah</td>
     </tr>
   </tbody>
   <tfoot>
     <tr>
-      <th scope="row" colspan="2">Total number of teams</th>
+      <th scope="row" colspan="3">Total number of teams</th>
       <td>7</td>
     </tr>
   </tfoot>
@@ -268,7 +274,7 @@
 </div>
 </body>
 <audio id="backgroundMusic" autoplay loop>
-  <source src="hl2_song30.mp3">
+  <source src="/hl2_song30.mp3">
   Your browser does not support the audio element.
 </audio>
 <script>
